--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,7 +34,7 @@ application.langs="en"
 # By convention, the default datasource is named `default`
 #
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost:3306/test"
+db.default.url="jdbc:mysql://localhost:3306/db"
 db.default.user=root
 db.default.password="1234"
 db.default.jndiName=DefaultDS
@@ -53,7 +53,8 @@ db.default.jndiName=DefaultDS
 # You can declare as many Ebean servers as you want.
 # By convention, the default server is named `default`
 #
- ebean.default="models.*"
+ebean.default="model.*"
+
 
 # Logger
 # ~~~~~
