--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//app/views/addAdvertisement.scala.html=UTF-8
 encoding//app/views/login.scala.html=UTF-8
 encoding/<project>=UTF-8
