--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,11 +33,11 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost:3306/db"
-db.default.user=root
-db.default.password="1234"
-db.default.jndiName=DefaultDS
+#db.default.driver=com.mysql.jdbc.Driver
+#db.default.url="jdbc:mysql://localhost:3306/db"
+#db.default.user=root
+#db.default.password="1234"
+#db.default.jndiName=DefaultDS
 #jpa.default=defaultPersistenceUnit
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
@@ -53,7 +53,7 @@ db.default.jndiName=DefaultDS
 # You can declare as many Ebean servers as you want.
 # By convention, the default server is named `default`
 #
-ebean.default="model.*"
+#ebean.default="model.*"
 
 
 # Logger
